--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PetMvvm</string>
+    <string name="save_data">Save Data</string>
+    <string name="get_data">Get Data</string>
 </resources>
