--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">PetMvvm</string>
+    <string name="bottom_nav_tab_news">News</string>
+    <string name="bottom_nav_tab_favorite">Favorite</string>
+    <string name="bottom_nav_tab_users">Users</string>
+    <string name="toolbar_title_news">News</string>
+    <string name="toolbar_title_favorite_news">Favorite news</string>
+    <string name="toolbar_title_users">Users</string>
 </resources>
